fixed carousel images on mobile for homepage

--- a/css/main.css
+++ b/css/main.css
@@ -154,7 +154,7 @@ padding-bottom: 2.5rem;
 }
 
 .coffee-img {
-	padding-top: 4rem;
+	margin-top: 1rem;
 }
 
 .coffee-bg {
@@ -211,6 +211,11 @@ padding-bottom: 2.5rem;
 .footer-icons li {
 	margin: auto .5rem;
 }
+
+
+
+
+
 
 
 @media screen and (min-width: 768px) {
